<resources>
    <string name="app_name">User Profile</string>
    <string name="name_Label">Имя</string>
    <string name="phone_label">Телефон</string>
    <string name="sex">Пол</string>
    <string name="text_swith_box">Получать уведомления</string>
    <string name="check_autorize">Об авторизации на устройстве</string>
    <string name="check_get_news">О новинках и предложениях</string>
    <string name="points_label">Баллы</string>
    <string name="text_save">Сохранить</string>
    <string name="saved">Информация сохранена</string>
</resources>