<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
>
    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/my_avatar"
            android:id="@+id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/name_Label"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            style="@style/Theme.Phone"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"

            android:hint="@string/phone_label"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/sex_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text"
                    android:text="@string/sex"/>
            <RadioButton
                    android:id="@+id/variant_male"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="М"/>
            <RadioButton
                    android:id="@+id/variant_female"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Ж"/>
    </RadioGroup>

    <Switch
            android:id="@+id/swith_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sex_radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/text_swith_box"
            android:textAppearance="@style/Text"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <CheckBox
            android:id="@+id/chek_autorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/swith_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Theme.CheckBox"
            android:textAppearance="@style/Text"
            android:text="@string/check_autorize"
    />
    <CheckBox
            android:id="@+id/chek_get_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chek_autorization"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Theme.CheckBox"
            android:textAppearance="@style/Text"
            android:text="@string/check_autorize"
    />

    <TextView
            android:id="@+id/points_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chek_get_news"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/Text"
            android:text="@string/points_label"
    />
    <TextView
            android:id="@+id/textPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chek_get_news"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/Text.Gray"
            android:text="44/100"
    />

    <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/line_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/points_label"
            android:max="100"
    />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/text_save"
            style="@style/Button"
            />
</androidx.constraintlayout.widget.ConstraintLayout>